# csgo_ml

./: .gitignore  docker-compose.dev.yml
django/: Dockerfile.dev  docker-entrypoint.dev.sh  pyproject.toml
django/config/: settings.py
django/csgo/: admin.py  apps.py  models.py
etl_local_mongo/: Dockerfile.dev  config.py  docker-entrypoint.dev.sh  main.py  pyproject.toml
etl_local_mongo/utils/: connections.py  logger.py  state.py  validators.py
postgres/: init.sql
